Web Inspector: List of grid nodes is incomplete in Layout sidebar panel https://bugs.webkit.org/show_bug.cgi?id=222364 <rdar://problem/74700960>

Patch by Razvan Caliman <rcaliman@apple.com> on 2021-02-25
Reviewed by Devin Rousso.

Source/JavaScriptCore:

Update inspector protocol description for CSS domain to mention default value for
`layoutContextTypeChangedMode` ("observed") and clarify behavior of "all" value.

* inspector/protocol/CSS.json:

Source/WebCore:

Ensure default value of `layoutContextTypeChangedMode` is set for InspectorCSSAgent
to recognize the mode change when switching monitor layout contexts of all nodes.

* inspector/agents/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::reset):

Canonical link: https://commits.webkit.org/234579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273502 268f45cc-cd09-0410-ab3c-d52691b4dbfc